--- a/src/COMMON/SConstruct
+++ b/src/COMMON/SConstruct
@@ -1,5 +1,11 @@
+## feff85exafs build system based on scons
+## see HEADERS/license.h for license information
 
-StaticLibrary('libfeffcom', Split('chopen.f  fixvar.f  head.f    itoken.f  pertab.f  rdcmt.f   rdxsph.f  str.f    \
-                                   xx.f      fixdsp.f  getorb.f  iniptz.f  nxtunt.f  pijump.f  rdhead.f  setgam.f \
-                                   str2dp.f  fixdsx.f  getxk.f   isnum.f   padlib.f  qsorti.f  rdpot.f   setkap.f \
-                                   wlog.f'))
+Import('env')
+
+lib_src = Split('chopen.f  fixvar.f  head.f    itoken.f  pertab.f  rdcmt.f   rdxsph.f  str.f    \
+                 xx.f      fixdsp.f  getorb.f  iniptz.f  nxtunt.f  pijump.f  rdhead.f  setgam.f \
+                 str2dp.f  fixdsx.f  getxk.f   isnum.f   padlib.f  qsorti.f  rdpot.f   setkap.f \
+                 wlog.f')
+
+env.StaticLibrary('libfeffcom', lib_src)
