--- a/src/SConstruct
+++ b/src/SConstruct
@@ -5,7 +5,7 @@ env = Environment()
 print '\n\tFortran compiler is ' + env['FORTRAN'] + '\n'
 
 if env['FORTRAN'] == 'gfortran':
-    env = Environment(FORTRANFLAGS = '-O3 -ffree-line-length-none')   ## -finit-local-zero
+    env = Environment(FORTRANFLAGS = '-O3 -ffree-line-length-none -Wall')   ## -Wall -finit-local-zero
 elif env['FORTRAN'] == 'g77':
     env = Environment(FORTRANFLAGS = '-Wall -O2')
 elif env['FORTRAN'] == 'xlf':
