--- a/src/SConstruct
+++ b/src/SConstruct
@@ -1,20 +1,11 @@
+## -*- python -*-
 ## feff85exafs build system based on scons
 ## see HEADERS/license.h for license information
 
 env = Environment()
 print '\n\tFortran compiler is ' + env['FORTRAN'] + '\n'
 
-if env['FORTRAN'] == 'gfortran':
-    env = Environment(FORTRANFLAGS = '-O3 -ffree-line-length-none -Wall')   ## -Wall -finit-local-zero
-elif env['FORTRAN'] == 'g77':
-    env = Environment(FORTRANFLAGS = '-Wall -O2')
-elif env['FORTRAN'] == 'xlf':
-    env = Environment(FORTRANFLAGS = '-qextern=trap')
-elif env['FORTRAN'] == 'ifort':
-    env = Environment(FORTRANFLAGS = '-O3')
 
-
-Export('env')
 SConscript(['PAR/SConstruct',    \
             'COMMON/SConstruct', \
             'MATH/SConstruct',   \
@@ -28,7 +19,7 @@ SConscript(['PAR/SConstruct',    \
             'XSPH/SConstruct',   \
             'FMS/SConstruct',    \
             'PATH/SConstruct',   \
-            'GENFMT/SConstruct'], exports='env') 
+            'GENFMT/SConstruct'])
 
 # POT    -> module 1
 # XSPH   -> module 2
