--- a/src/FOVRG/SConstruct
+++ b/src/FOVRG/SConstruct
@@ -1,7 +1,12 @@
+## -*- python -*-
 ## feff85exafs build system based on scons
 ## see HEADERS/license.h for license information
 
-Import('env')
+import sys
+sys.path.append('..')
+from FortranCompilation import CompilationEnvironment
+
+env = CompilationEnvironment()
 
 lib_src = Split('aprdec.f aprdep.f dfovrg.f diff.f dsordc.f inmuac.f intout.f  muatcc.f nucdec.f ortdac.f \
                  potdvp.f potex.f solin.f solout.f wfirdc.f yzkrdc.f yzktec.f')
