--- a/src/GENFMT/SConstruct
+++ b/src/GENFMT/SConstruct
@@ -1,12 +1,17 @@
+## -*- python -*-
 ## feff85exafs build system based on scons
 ## see HEADERS/license.h for license information
 
-Import('env')
+import sys
+sys.path.append('..')
+from FortranCompilation import CompilationEnvironment
+
+env = CompilationEnvironment()
 
 bin_src = Split('ffmod5.f  fmtrxi.f  genfmt.f  mmtr.f  mmtrxi.f  rdpath.f  regenf.f  rot3i.f \
                  sclmz.f   setlam.f  snlm.f    xstar.f')
 
-env.Program('genfmt', bin_src,
+env.Program('genfmt', bin_src, \
         LIBS = ['feffcom', 'feffmath', 'feffpar'], \
         LIBPATH = ['../COMMON', '../MATH', '../PAR'])
 
