--- a/src/PATH/SConstruct
+++ b/src/PATH/SConstruct
@@ -1,7 +1,12 @@
+## -*- python -*-
 ## feff85exafs build system based on scons
 ## see HEADERS/license.h for license information
 
-Import('env')
+import sys
+sys.path.append('..')
+from FortranCompilation import CompilationEnvironment
+
+env = CompilationEnvironment()
 
 bin_src = Split('ffmod4.f   ccrit.f   heap.f    ipack.f   mcrith.f  mcritk.f  mpprmd.f \
                  mpprmp.f   mrb.f     outcrt.f  repath.f  paths.f   pathsd.f  phash.f  \
