compiling materials for unit tests

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,12 @@ fort.*
 log*.dat
 global.dat
 
+## nonsense that Athena writes out
+.gnuplot*
+
+## conversion of md -> html
+README.html
+
 ## compiled programs
 src/POT/pot
 src/GENFMT/genfmt
