--- a/src/POT/SConstruct
+++ b/src/POT/SConstruct
@@ -14,10 +14,8 @@ bin_src = Split('ffmod1.f pot.f    scmtmp.f afolp.f broydn.f corval.f coulom.f f
                  grids.f  inipot.f istval.f moveh.f ovrlp.f  reapot.f rholie.f \
                  scmt.f   sumax.f  wpot.f   wrpot.f')
 
-other_objects = ['/usr/local/lib/libjsonfortran.a']
-
 env.StaticLibrary('libint', lib_src)
 
-env.Program('pot', bin_src + other_objects,
-        LIBS = ['pha', 'atom', 'int', 'feffcom', 'feffmath', 'exch', 'fms', 'feffpar'], \
-        LIBPATH = ['.', '../COMMON', '../MATH', '../ATOM', '../EXCH', '../FOVRG', '../FMS', '../PAR'])
+env.Program('pot', bin_src,
+            LIBS = ['pha', 'atom', 'int', 'feffcom', 'feffmath', 'jsonfortran', 'feffjson', 'exch', 'fms', 'feffpar'], \
+            LIBPATH = ['.', '../COMMON', '../MATH', '../JSON', '../ATOM', '../EXCH', '../FOVRG', '../FMS', '../PAR'])
