--- a/src/JSON/SConstruct
+++ b/src/JSON/SConstruct
@@ -8,7 +8,7 @@ from FortranCompilation import CompilationEnvironment
 
 env = CompilationEnvironment()
 
-lib_src = ['bailout.f']
+lib_src = ['bailout.f', 'read_geom.f', 'read_atoms.f', 'read_global.f']
 
 env.StaticLibrary('libfeffjson', lib_src)
 
