cleared out ldos,eels,s02 .dat files
 - commented out lines giving fort.38 and fort.39
 - quieted a lot of compiler warnings of the type coversion and unused variable varieties

--- a/src/FMS/SConstruct
+++ b/src/FMS/SConstruct
@@ -10,10 +10,10 @@ env = CompilationEnvironment()
 
 lib_src = Split('fmsie.f fmspack.f gglu.f ggbi.f ggrm.f gggm.f ggtf.f yprep.f xstaff.f')
 
-bin_src = Split('ffmod3.f fmstot.f reafms.f xprep.f')
-
 env.StaticLibrary('libfms', lib_src)
 
-env.Program('fms', bin_src, \
-        LIBS    = ['fms', 'dw', 'feffcom', 'feffmath', 'feffpar'], \
-        LIBPATH = ['.', '../DEBYE', '../COMMON', '../MATH', '../PAR'])
+#bin_src = Split('ffmod3.f fmstot.f reafms.f xprep.f')
+#
+#env.Program('fms', bin_src, \
+#        LIBS    = ['fms', 'dw', 'feffcom', 'feffmath', 'feffpar'], \
+#        LIBPATH = ['.', '../DEBYE', '../COMMON', '../MATH', '../PAR'])
