made fpf0.json, but commented call to fpf0 out in ATOM/scfdat.f
examination of the code in FF2X/fprime.f shows that the information in fpf0.dat is notused in any case

--- a/src/JSON/SConstruct
+++ b/src/JSON/SConstruct
@@ -8,7 +8,7 @@ from FortranCompilation import CompilationEnvironment
 
 env = CompilationEnvironment()
 
-lib_src = ['bailout.f', 'read_geom.f', 'read_atoms.f', 'read_global.f']
+lib_src = ['bailout.f', 'read_geom.f', 'read_atoms.f', 'read_global.f', 'read_fpf0.f']
 
 env.StaticLibrary('libfeffjson', lib_src)
 
