--- a/src/JSON/SConstruct
+++ b/src/JSON/SConstruct
@@ -8,7 +8,8 @@ from FortranCompilation import CompilationEnvironment
 
 env = CompilationEnvironment()
 
-lib_src = ['bailout.f', 'read_geom.f', 'read_atoms.f', 'read_global.f', 'read_fpf0.f']
+lib_src = ['bailout.f', 'read_geom.f', 'read_atoms.f', 'read_global.f', 'read_fpf0.f',
+           'json_xsect.f', 'read_xsect.f']
 
 env.StaticLibrary('libfeffjson', lib_src)
 
