--- a/src/MATH/SConstruct
+++ b/src/MATH/SConstruct
@@ -8,6 +8,10 @@ from FortranCompilation import CompilationEnvironment
 
 env = CompilationEnvironment()
 
+## Quiet compiler warnings on LAPACK and other well-tested files
+flags = env['FORTRANFLAGS']
+env['FORTRANFLAGS'] = flags.replace('-Wall', '')
+
 lib_src = Split('bcoef.f   besjn.f   conv.f    csomm.f   cwig3j.f  determ.f  exjlnl.f  phamp.f \
                  quartc.f  sdist.f   somm2.f   terp.f    trap.f    besjh.f   bjnser.f  cpl0.f  \
                  csomm2.f  czeros.f  dist.f    lu.f      polint.f  rotwig.f  somm.f    strap.f \
