--- a/src/GENFMT/SConstruct
+++ b/src/GENFMT/SConstruct
@@ -8,8 +8,7 @@ from FortranCompilation import CompilationEnvironment
 
 env = CompilationEnvironment()
 
-bin_src = Split('ffmod5.f  fmtrxi.f  genfmt.f  mmtr.f  mmtrxi.f  rdpath.f  regenf.f  rot3i.f \
-                 sclmz.f   setlam.f  snlm.f    xstar.f')
+bin_src = ('ffmod5.f', 'fmtrxi.f', 'genfmt.f', 'mmtr.f', 'mmtrxi.f', 'rdpath.f', 'regenf.f', 'rot3i.f', 'sclmz.f', 'setlam.f', 'snlm.f', 'xstar.f')
 
 env.Program('genfmt', bin_src, \
         LIBS = ['feffcom', 'jsonfortran', 'feffjson', 'feffmath', 'feffpar'], \
