--- a/src/GENFMT/SConstruct
+++ b/src/GENFMT/SConstruct
@@ -20,8 +20,10 @@ env.Program('genfmt', bin_src, \
         LIBPATH = ['.', '../COMMON', '../JSON', '../MATH', '../PAR'])
 
 
-onepath_src = ['onepath.f', 'read_onepath.f']
-other_obj = ['../FF2X/fdtarr.o', '../FF2X/fdthea.o']
-env.Program('onepath', onepath_src + other_obj, \
-        LIBS = ['genfmt', 'feffcom', 'jsonfortran', 'feffjson', 'feffmath', 'feffpar'], \
-        LIBPATH = ['.', '../COMMON', '../JSON', '../MATH', '../PAR'])
+onepath_src = ['onepath.f', 'read_onepath.f', 'pathgeom.f']
+other_obj = ['../FF2X/fdtarr.o', '../FF2X/fdthea.o', '../RDINP/mkptz.o']
+env.StaticLibrary('libonepath', onepath_src + other_obj)
+
+env.Program('feffpath', 'feffpath.c', \
+            LIBS = ['onepath', 'genfmt', 'feffcom', 'jsonfortran', 'feffjson', 'feffmath', 'feffpar', 'gfortran', 'm'], \
+            LIBPATH = ['.', '../COMMON', '../JSON', '../MATH', '../PAR'])
