close to a callable library

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ src/POT/pot
 src/GENFMT/genfmt
 src/GENFMT/onepath
 src/GENFMT/feffpath
+src/GENFMT/makepath
 src/PATH/path
 src/XSPH/xsph
 src/FMS/fms
